Update jupyter notebook

--- a/Predicting House Values.ipynb
+++ b/Predicting House Values.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Predicting House Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Read Data"
    ]
   },
