Update jupyter notebook

--- a/House Value Prediction Model.ipynb
+++ b/House Value Prediction Model.ipynb
@@ -926,15 +926,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As one may observe, our model performs pretty well on the test set."
+    "As one may observe, our model performs pretty well on the test set. This means that our model is valid and ready for potential production."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
